// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.


syntax = "proto3";
package openpitrix;

// set go package name to pb
option go_package = "pb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

message RuntimeLabel{
	google.protobuf.StringValue runtime_label_id = 1;
	google.protobuf.StringValue runtime_id = 2;
	google.protobuf.StringValue label_key = 3;
	google.protobuf.StringValue label_value = 4;
}

message Runtime{
	google.protobuf.StringValue runtime_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue runtime_url = 4;
	google.protobuf.StringValue runtime_credential_id = 5;
	repeated RuntimeLabel labels = 6;
	google.protobuf.StringValue owner = 7;
	google.protobuf.StringValue status = 8;
	google.protobuf.Timestamp create_time = 9;
	google.protobuf.Timestamp status_time = 10;
}

message CreateRuntimeRequest {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue description = 2;
	google.protobuf.StringValue labels = 3;
	google.protobuf.StringValue runtime_url = 4;
}

message CreateRuntimeResponse{
	Runtime runtime = 1;
}

message DescribeRuntimesRequest{
	repeated string runtime_id = 1;
	repeated string status = 2;
	google.protobuf.StringValue search_word = 3;
	google.protobuf.StringValue selector = 4;
	repeated string owner = 5;
	uint32 limit = 6;
	uint32 offset = 7;
}

message DescribeRuntimesResponse{
	uint32 total_count = 1;
	repeated Runtime runtime_set = 2;
}

message ModifyRuntimeRequest{
	google.protobuf.StringValue runtime_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue labels = 4;
}

message ModifyRuntimeResponse{
	Runtime runtime = 1;
}

message DeleteRuntimeRequest{
	google.protobuf.StringValue runtime_id = 1;
}

message DeleteRuntimeResponse{
	Runtime runtime = 1;
}

message RuntimeCredential{
	google.protobuf.StringValue runtime_credential_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	map <string, string> content = 4;
	google.protobuf.StringValue owner = 5;
	repeated string runtime_id = 6;
	google.protobuf.StringValue status = 7;
	google.protobuf.Timestamp create_time = 9;
	google.protobuf.Timestamp status_time = 10;
}

message CreateRuntimeCredentialRequset{
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue description = 2;
	map <string, string> content = 3;
}

message CreateRuntimeCredentialResponse{
	RuntimeCredential runtime_credential = 1 ;
}

message DescribeRuntimeCredentialsRequset{
	repeated string runtime_credential_id = 1;
	repeated string status = 2;
	google.protobuf.StringValue search_word = 3;
	repeated string owner = 4;
	uint32 limit = 5;
	uint32 offset = 6;
}

message DescribeRuntimeCredentialsResponse{
	uint32 total_count = 1;
	repeated RuntimeCredential runtime_credential_set = 2;
}

message ModifyRuntimeCredentialRequest{
	google.protobuf.StringValue runtime_credential_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	map <string, string> content = 4;
}

message ModifyRuntimeCredentialResponse{
	RuntimeCredential runtime_credential = 1 ;
}

message DeleteRuntimeCredentialRequset{
	google.protobuf.StringValue runtime_credential_id = 1;
}

message DeleteRuntimeCredentialResponse{
	RuntimeCredential runtime_credential = 1 ;
}

service RuntimeManager{
	rpc CreateRuntime (CreateRuntimeRequest) returns (CreateRuntimeResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create runtime"
		};
		option (google.api.http) = {
			post: "/v1/runtimes"
			body: "*"
		};
	}

	rpc DescribeRuntimes (DescribeRuntimesRequest) returns (DescribeRuntimesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe runtimes"
		};
		option (google.api.http) = {
			get: "/v1/runtimes"
		};
	}

	rpc ModifyRuntime (ModifyRuntimeRequest) returns (ModifyRuntimeResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "modify runtime"
		};
		option (google.api.http) = {
			patch: "/v1/runtimes"
			body: "*"
		};
	}

	rpc DeleteRuntime (DeleteRuntimeRequest) returns (DeleteRuntimeResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "delete runtime"
		};
		option (google.api.http) = {
			delete: "/v1/runtimes"
			body: "*"
		};
	}

	rpc CreateRuntimeCredential (CreateRuntimeCredentialRequset) returns (CreateRuntimeCredentialResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create runtime credential"
		};
		option (google.api.http) = {
			post: "/v1/runtime_credentials"
			body: "*"
		};
	}

	rpc DescribeRuntimeCredentials (DescribeRuntimeCredentialsRequset) returns (DescribeRuntimeCredentialsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe runtime crendentials"
		};
		option (google.api.http) = {
			get: "/v1/runtime_credentials"
		};
	}

	rpc ModifyRuntimeCredential (ModifyRuntimeCredentialRequest) returns (ModifyRuntimeCredentialResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "modify runtime credential"
		};
		option (google.api.http) = {
			patch: "/v1/runtime_credentials"
			body: "*"
		};
	}

	rpc DeleteRuntimeCredential (DeleteRuntimeCredentialRequset) returns (DeleteRuntimeCredentialResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "modify runtime credential"
		};
		option (google.api.http) = {
			delete: "/v1/runtime_credentials"
			body: "*"
		};
	}
}
